--- a/src/styles/layouts/layout.scss
+++ b/src/styles/layouts/layout.scss
@@ -6,9 +6,10 @@
     grid-template-columns: 100%;
 
     height: 100vh;
-    max-width: $b-md;
-    
-    margin: 0 auto;
-    padding-left: 20px;
-    padding-right: 20px;
+
+    padding: 0 20px;
+
+    @media (min-width: $b-lg) {
+        padding: 0 0;
+    }
 }
