--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -15,14 +15,15 @@ body {
     font-family: var(--fnt-sans);
 }
 
-// ::-webkit-scrollbar {
-//     width: 4px;
-//     background-color: transparent;
-// }
+::-webkit-scrollbar {
+    height: 4px;
+    width: 4px;
+    background-color: transparent;
+}
 
-// ::-webkit-scrollbar-thumb {
-//     background: var(--clr-ac);
-// }
+::-webkit-scrollbar-thumb {
+    background: var(--clr-ac);
+}
 
 // ! TEMP
 a {
