feat: blogging with gh issues
& talks quarter
: heavily influenced by and based on AllanChain/blog

--- a/src/styles/templates/article.scss
+++ b/src/styles/templates/article.scss
@@ -260,6 +260,10 @@ details {
   font-size: 1em;
 }
 
+img {
+  max-width: 100%;
+}
+
 /* .katex-display {
   overflow-x: auto;
   overflow-y: visible;
