--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -12,3 +12,19 @@
 .index-block {
   margin: 2em 0;
 }
+
+.index-block>* {
+  margin: .5em 0;
+
+  &:first-child {
+    margin-top: 0;
+  }
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.index-block-friends {
+  margin: 1em .5em;
+}
