feat: change mono and font fallbacks

--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,7 +1,7 @@
 :root {
-    --fnt-sans: "Noto Sans", "Noto Sans CJK SC", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    --fnt-sans: "Noto Sans", "Noto Sans CJK SC", "Microsoft YaHei", "PingFang SC", "SF Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     
-    --fnt-serif: "Noto Serif", "Noto Serif CJK SC", Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+    --fnt-serif: "Noto Serif", "Noto Serif CJK SC", "New York", "Roboto Slab", Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 
-    --fnt-mono: "Sarasa Fixed SC", "Courier New", Courier, monospace;
+    --fnt-mono: "Fira Code", "Noto Sans CJK SC", "SF Mono", "Roboto Mono", Menlo, "JetBrains Mono", "Cascadia Code", Consolas, monospace;
 }
