--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,19 +1,17 @@
-@import './components/prism.scss';
-
 @mixin colors-core-dark {
     --clr-ac: #FFE900;
+    --clr-sc: #f86b1d;
     --clr-bg: #253137;
     --clr-ft: #f5f5f5;
     --clr-dm: #B2BBBE;
-    @include prism-one-dark();
 }
 
 @mixin colors-core-light {
     --clr-ac: #003A70;
+    --clr-sc: #61649f;
     --clr-bg: #F5F5F5;
     --clr-ft: #1D252D;
     --clr-dm: #737C7B;
-    @include prism-one-light();
 }
 
 
