--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -39,15 +39,13 @@ header {
     @extend .header-link;
     height: 1.5em;
     width: 1.5em;
-
-    border: .25em solid transparent;
-    border-radius: .25em;
+    padding: 4px;
+    transition: all 0.2s ease-in;
 
     &:hover,
     &.active {
-      background-color: var(--clr-ac);
-      color: var(--clr-bg);
-      border-color: var(--clr-ac);
+      color: var(--clr-sc);
+      transition: all 0.3s ease-out;
     }
   }
 }
