fix: trivial style fix

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -35,7 +35,11 @@ body {
 a {
   color: var(--clr-ac);
   text-decoration: none;
-  cursor: pointer;
+
+  @media (hover: hover) {
+    cursor: pointer;
+  }
+  
 }
 
 article {
