--- a/src/styles/templates/article.scss
+++ b/src/styles/templates/article.scss
@@ -1,14 +1,18 @@
-p {
-  a {
-    text-decoration-skip-ink: auto;
-    color: var(--clr-ac);
-    transition: all 0.2s ease-in;
+a,
+a * {
+  text-decoration-skip-ink: auto;
+  color: var(--clr-ac) !important;
+  transition: all 0.2s ease-in;
 
-    &:hover{
-      color: var(--clr-sc);
-      transition: all 0.3s ease-out;
-    }
+  &:hover{
+    color: var(--clr-sc) !important;
+    transition: all 0.3s ease-out;
   }
+}
+
+
+a:hover::after {
+  content: '°';
 }
 
 .post-footer>a {
@@ -16,12 +20,11 @@ p {
 }
 
 h1 {
-  font-size: 1.9em;
+  font-size: 2em;
   padding-top: 0.2em;
   margin: 0.5em 0em 0.75em 0em;
   font-family: var(--fnt-serif);
   font-weight: bold;
-  line-height: 1.3em;
 }
 
 h2,
@@ -35,8 +38,7 @@ h6 {
 }
 
 h2 {
-  font-size: 1.25em;
-  line-height: 1.4em;
+  font-size: 1.5em;
 
   a {
       text-decoration: none;
@@ -56,22 +58,21 @@ h2 {
   }
 }
 
-h5,
-h6 {
-  line-height: 1.3em;
+h3 {
+  font-size: 1.25em;
 }
 
 h4 {
-  line-height: 1.3em;
+  font-size: 1.125em;
 }
 
-h3 {
-  font-size: 1.1em;
-  line-height: 1.3em;
+h5,
+h6 {
+  font-size: 1em;
 }
 
 p {
-  margin: 0em 0 1em 0;
+  margin: 1em 0;
 }
 
 strong {
@@ -82,7 +83,6 @@ strong {
 a {
   text-decoration: underline;
   text-decoration-skip-ink: auto;
-  color: var(--clr-ft);
 }
 
 /* a,
@@ -257,14 +257,19 @@ table {
   max-width: 100%;
   border-spacing: 0;
 
-  thead {
-      background: gray /*  gray-background */;
+  // thead {
+  //   background: gray /*  gray-background */;
+  // }
+
+  th {
+    border-bottom: 2px solid var(--clr-ft);
+    
   }
 
   th,
   td {
-      padding: 0.5em 1em;
-      border: 1px double gray /* gray-table-border */;
+    padding: 0.5em 1em;
+    // border: 1px double gray /* gray-table-border */;
   }
 }
 
@@ -288,3 +293,44 @@ img {
   overflow-x: auto;
   overflow-y: visible;
 } */
+
+.leipzig {
+  margin: 1em 0;
+  border: 4px solid var(--clr-ac);
+  border-radius: 8px;
+  padding: 0.75em;
+
+  display: flex;
+  flex-direction: column;
+  gap: 0.25em;
+  
+  .l-align {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0 0.75em;
+
+    > * {
+      display: grid;
+      line-height: 1.45;
+    }
+  }
+
+  .l-title,
+  .l-trans {
+    display: block;
+    width: 100%;
+  }
+
+  .l-title {
+    font-weight: bold;
+  }
+
+  .l-trans {
+    font-style: italic;
+    line-height: 1.45;
+  }
+
+  .l-abbr {
+    font-variant: all-small-caps;
+  }
+}
