--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,9 +5,9 @@
   --color-foreground: #1D252D;
   --color-dim:        #737C7B;
 
-  --font-sans: "Noto Sans", "SF Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Avenir Next", "Helvetica Neue", sans-serif;
+  --font-sans: "Noto Sans", var(--custom-font-sans, sans-serif), "SF Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Avenir Next", "Helvetica Neue", sans-serif;
     
-  --font-serif: "Noto Serif", "New York", "Roboto Slab", Cambria, Georgia, Times, "Times New Roman", serif;
+  --font-serif: "Noto Serif", var(--custom-font-serif, serif), "Noto Serif", "New York", "Roboto Slab", Cambria, Georgia, Times, "Times New Roman", serif;
 
   --font-mono: "JetBrains Mono", "SF Mono", "Roboto Mono", Menlo, "Cascadia Code", Consolas, monospace;
 }
