--- a/src/styles/article.css
+++ b/src/styles/article.css
@@ -1,16 +1,15 @@
-#md {
-  /* a, a>svg {
+/*#md {
+   a, a>svg {
 		transition: 0.1s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
-	*/
-  /* .katex-display {
+	.katex-display {
 		overflow-x: auto;
 		overflow-y: visible;
 }
-	*/
-}
+	
+}*/
 
-#md a,
+/* #md a,
 #md a * {
   text-decoration-skip-ink: auto;
   color: var(--color-accent);
@@ -20,6 +19,36 @@
 #md a *:hover {
   color: var(--color-secondary);
   transition: all 0.3s ease-out;
+} */
+
+#md a {
+  text-decoration: none;
+  position: relative;
+  transition: all 200ms cubic-bezier(0, 0.8, 0.13, 1);
+}
+
+#md a:hover {
+  color: var(--color-background);
+}
+
+#md a::after {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  top: calc(100% - 6px);
+  left: -0.25ch;
+  right: -0.25ch;
+  bottom: -0.1em;
+  transition: all 200ms cubic-bezier(0, 0.8, 0.13, 1);
+  border-radius: 3px;
+  background-color: var(--color-accent);
+  opacity: 0.5;
+}
+
+#md a:hover::after {
+  top: -0.1em;
+  opacity: 1;
+  transition-duration: 300ms;
 }
 
 .dark #md strong {
@@ -52,7 +81,7 @@
 #md h2 {
   font-size: 1.5em;
 }
-#md h2 a {
+/* #md h2 a {
   text-decoration: none;
   position: relative;
   padding-bottom: 2px;
@@ -64,7 +93,7 @@
   color: var(--color-accent);
   box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 var(--color-accent) inset;
   transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
-}
+} */
 #md h3 {
   font-size: 1.25em;
 }
@@ -96,10 +125,10 @@
 #md .\~:last-child {
   margin-bottom: 0;
 }
-#md a {
+/* #md a {
   text-decoration: underline;
   text-decoration-skip-ink: auto;
-}
+} */
 #md time,
 #md .wordcount,
 #md .series-header {
