--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,10 +1,4 @@
 :root {
-  --color-accent:     var(--accent-light-accent, #003A70);
-  --color-secondary:  var(--accent-light-secondary, #61649f);
-  --color-background: #F5F5F5;
-  --color-foreground: #1D252D;
-  --color-dim:        #737C7B;
-
   --font-sans: "Noto Sans", var(--custom-font-sans, sans-serif), "SF Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Avenir Next", "Helvetica Neue", sans-serif;
     
   --font-serif: "Noto Serif", var(--custom-font-serif, serif), "Noto Serif", "New York", "Roboto Slab", Cambria, Georgia, Times, "Times New Roman", serif;
@@ -12,7 +6,15 @@
   --font-mono: "JetBrains Mono", "SF Mono", "Roboto Mono", Menlo, "Cascadia Code", Consolas, monospace;
 }
 
-:root.dark {
+html:not(.dark) {
+  --color-accent:     var(--accent-light-accent, #003A70);
+  --color-secondary:  var(--accent-light-secondary, #61649f);
+  --color-background: #F5F5F5;
+  --color-foreground: #1D252D;
+  --color-dim:        #737C7B;
+}
+
+html.dark {
   --color-accent:     var(--accent-dark-accent, #FFE900);
   --color-secondary:  var(--accent-dark-secondary, #f86b1d);
   --color-background: #253137;
