--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -24,13 +24,15 @@ html.dark {
 
 html {
   height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
   text-align: center;
   font-size: 1rem;
   line-height: 1.5rem;
-  overflow: auto;
-  overflow: overlay;
+  overflow-x: hidden;
+  overflow-y: auto;
+  overflow-y: overlay;
 
   background-color: var(--color-background);
   color: var(--color-foreground);
