--- a/src/components/PostMeta.astro
+++ b/src/components/PostMeta.astro
@@ -20,7 +20,7 @@ const { meta } = Astro.props;
   <div class="inline-chip">
     <time>{lightFormat(decideTimeFromStatus(meta), "yyyy/MM/dd")}</time>
   </div>
-  <a href={new URL(`category/${meta.taxonomy.category}`, Astro.site)}
+  <a href={new URL(`${import.meta.env.BASE_URL}category/${meta.taxonomy.category}`, Astro.site)}
     ><div
       class="text-one-front ub-one-front @hover-text-one @hover-border-one inline-chip transition-lively"
     >
@@ -29,7 +29,7 @@ const { meta } = Astro.props;
   >
   {
     meta.taxonomy.tags.map((tag) => (
-      <a href={new URL(`tag/${tag}`, Astro.site)}>
+      <a href={new URL(`${import.meta.env.BASE_URL}tag/${tag}`, Astro.site)}>
         <div class="text-two-front ub-two-front @hover-text-two @hover-border-two inline-chip transition-lively">
           @{tag}
         </div>
@@ -38,7 +38,7 @@ const { meta } = Astro.props;
   }
   {
     meta.taxonomy.series ? (
-      <a href={new URL(`series/${meta.taxonomy.series[0]}`, Astro.site)}>
+      <a href={new URL(`${import.meta.env.BASE_URL}series/${meta.taxonomy.series[0]}`, Astro.site)}>
         <div class="inline-chip ub border-b-dotted @hover-text-one @hover-border-one transition-lively">
           {meta.taxonomy.series[0]}[{meta.taxonomy.series[1]}]
         </div>
