--- a/src/components/TheHeader.astro
+++ b/src/components/TheHeader.astro
@@ -1,12 +1,12 @@
 <header id="the-header">
   <nav>
-    <a href={new URL("/", Astro.site)} title="Home"
+    <a href={new URL(import.meta.env.BASE_URL, Astro.site)} title="Home"
       ><div class="i-mdi-circle"></div></a
     >
   </nav>
   <div class="flex-1"></div>
   <nav class="gap-3">
-    <a title="Archive" href={new URL("/archive", Astro.site)}>
+    <a title="Archive" href={new URL(`${import.meta.env.BASE_URL}archive`, Astro.site)}>
       <div class="i-mdi-archive"></div>
     </a>
     <!-- <button title="Posts">
