--- a/src/components/PostInfoBrief.astro
+++ b/src/components/PostInfoBrief.astro
@@ -11,12 +11,12 @@ const {
 } = Astro.props;
 ---
 
-<article class="flex flex-row flex-wrap flex-gap-[0_1rem] items-baseline">
+<article class="flex flex-row flex-gap-[0_1rem] items-baseline">
   <span class="font-mono">
     <time>{lightFormat(decideTimeFromStatus(meta), "MM/dd")}</time>
   </span>
   <a
-    class="@hover-text-one-front font-mono transition-lively"
+    class="lt-sm:hidden @hover-text-one-front font-mono transition-lively"
     href={new URL(`${import.meta.env.BASE_URL}category/${meta.taxonomy.category}`, Astro.site)}
   >
     <span>{meta.taxonomy.category}</span>
