--- a/src/components/TheHeader.astro
+++ b/src/components/TheHeader.astro
@@ -16,8 +16,8 @@
 </header>
 
 <style is:global>
-  #the-header nav > a,
-  #the-header nav > button {
+  #the-header nav a,
+  #the-header nav button {
     @apply text-lg
       text-one @hover-text-one-front active:text-one-front transition-lively;
   }
