--- a/src/components/FriendList.astro
+++ b/src/components/FriendList.astro
@@ -7,5 +7,5 @@ const friendsSorted = friends.sort((a, b) => sortUnicode(a.name, b.name));
 ---
 
 <div class="p-1 grid grid-cols-[auto_auto_1fr] grid-gap-2 items-center">
-  {friendsSorted.map((friend) => <Friend {friend} />)}
+  {friendsSorted.map(friend => <Friend {friend} />)}
 </div>
