--- a/src/components/PostInfoBrief.astro
+++ b/src/components/PostInfoBrief.astro
@@ -3,7 +3,7 @@ import { lightFormat } from "date-fns";
 import { decideTimeFromStatus } from "src/utils/time";
 
 export interface Props {
-  info: post.PostInfo;
+  info: post.PostInfo
 }
 
 const {
