--- a/src/components/IconGenre.astro
+++ b/src/components/IconGenre.astro
@@ -2,7 +2,7 @@
 import type { Genre } from "src/utils/meta";
 
 export interface Props {
-  genre: Genre;
+  genre: Genre
 }
 
 const { genre } = Astro.props;
