--- a/src/layouts/LayoutDefault.astro
+++ b/src/layouts/LayoutDefault.astro
@@ -4,8 +4,8 @@ import BaseHeadline from "src/components/BaseHeadline.astro";
 import BaseLayout from "./BaseLayout.astro";
 
 export interface Props {
-  title: string;
-  description: string;
+  title: string
+  description: string
 }
 
 const { title, description } = Astro.props;
