--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ import FriendList from "src/components/FriendList.astro";
 
   <section class="flex flex-col gap-3">
     <h2 class="text-2xl font-bold text-one-front">Recent Posts</h2>
-    {timeDesc.map((key) => <PostInfoFull info={PostInfo[key]} />)}
+    {timeDesc.map(key => <PostInfoFull info={PostInfo[key]} />)}
   </section>
 </BaseLayout>
 
