--- a/src/pages/post/[slug].astro
+++ b/src/pages/post/[slug].astro
@@ -11,7 +11,7 @@ export async function getStaticPaths() {
 }
 
 const { slug } = Astro.params as {
-  slug: string;
+  slug: string
 };
 
 const { default: Content, excerpt, metadata: meta } = await postImport[slug]();
