--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -6,6 +6,7 @@ import NotFound from "@/meta/404.html?raw";
 <LayoutDefault
   title="404"
   description="Page not found."
+  noComments={true}
 >
   <p class="pb-4">
     <button title="Back" onclick="history.back()">
