--- a/src/pages/archive.astro
+++ b/src/pages/archive.astro
@@ -18,6 +18,7 @@ timeDesc.forEach(key =>
 <LayoutDefault
   title="Archive"
   description="Archive of Yixuan Wang's blog posts."
+  noComments={true}
 >
   <div class="flex flex-col gap-8">
     {
