--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import BaseLayout from "src/layouts/BaseLayout.astro";
+import LayoutEmpty from "src/layouts/LayoutEmpty.astro";
 
 import PostInfo, { timeDesc } from "post:info";
 import PostInfoFull from "src/components/PostInfoFull.astro";
@@ -8,7 +8,7 @@ import ColorPalette from "src/components/ColorPalette.astro";
 import FriendList from "src/components/FriendList.astro";
 ---
 
-<BaseLayout title="Pak">
+<LayoutEmpty>
   <header class="flex flex-col">
     <h1 class="text-6xl font-bold text-one">Pak</h1>
     <p class="text-3xl font-bold mb-3 text-one-front">Yixuan Wang's Blog</p>
@@ -32,7 +32,7 @@ import FriendList from "src/components/FriendList.astro";
       <FriendList />
     </section>
   </section>
-</BaseLayout>
+</LayoutEmpty>
 
 <style is:global>
   #the-main {
