--- a/src/components/BaseHeadline.astro
+++ b/src/components/BaseHeadline.astro
@@ -7,6 +7,6 @@ const { headline } = Astro.props;
 ---
 
 <header class="mb-8 flex flex-col gap-2">
-  <h1 class="font-bold text-5xl">{headline}</h1>
+  <h1 class="font-bold text-5xl" style="line-height: 1.25;">{headline}</h1>
   <slot />
 </header>
