--- a/src/pages/post/[slug].astro
+++ b/src/pages/post/[slug].astro
@@ -14,7 +14,7 @@ const { slug } = Astro.params as {
   slug: string
 };
 
-const { default: Content, excerpt, metadata: meta } = await postImport[slug]();
+const { default: Content, excerpt, metadata: meta, toc } = await postImport[slug]();
 ---
 
 <LayoutDefault title={meta.title} description={excerpt}>
@@ -29,6 +29,16 @@ const { default: Content, excerpt, metadata: meta } = await postImport[slug]();
     <PostMeta meta={meta} />
   </Fragment>
   <main id="md" lang={meta.lang ?? "zh-Hans"}>
+    { toc ? (
+      <section id="toc-container">
+        <aside id="toc">
+          <a id="toc-to-top" href="#"><div class="i-mdi-arrow-up-circle"></div></a>
+          {toc.map(([heading, id]) => (
+            <span class="font-bold"><a href={`#${id}`}>{heading}</a></span>
+          ))}
+        </aside>
+      </section>
+      ) : null }
     <Content>
       <Fragment slot="foldout">
         <!-- <p class="my-4">Hi! from foldout.</p> -->
@@ -36,3 +46,54 @@ const { default: Content, excerpt, metadata: meta } = await postImport[slug]();
     </Content>
   </main>
 </LayoutDefault>
+
+<style>
+  #toc-container {
+    @apply relative lg:(sticky top-6) w-full ;
+  }
+  #toc {
+    @apply
+      flex flex-col w-fit items-start
+      lg:(
+        absolute left-full ml-4 overflow-y-auto
+      )
+    ;
+    gap: 0.25rem 0;
+    max-height: 50vh;
+    max-height: 50dvh;
+  }
+
+  @media (min-width: 1024px) {
+    #toc {
+      min-width: max-content;
+      max-width: calc(calc(calc(100vw - 100%) / 2) - 2.5rem);
+      max-width: calc(calc(calc(100dvw - 100%) / 2) - 2.5rem);
+    }
+  }
+
+  #toc a {
+    border: none !important;
+    padding: unset;
+  }
+
+  #toc-to-top {
+    @apply lt-lg:hidden;
+  }
+
+</style>
+
+<!-- max-h-[50vh]
+        w-[calc(calc(calc(100vw-100%)/2)-2rem)]
+        overflow-y -->
+
+<!-- @media (min-width: 1024px) {
+  #toc {
+    position: absolute;
+    left: 100%;
+    padding: 0 .5em;
+    width: calc(calc(calc(100vw - 100%) / 2) - 2em);
+    margin-left: 1em;
+    max-height: 50vh;
+    overflow-y: auto;
+  }
+} -->
